# slackattack

./: .bumpversion.cfg  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  _version.py  banner.py  get_version.py  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  setup.py  slackattack.go  slackattack.py
.github/workflows/: build.yml  docker-build.yml  docker.yml  go.yml  golint.yml  python-publish.yml
golang/: debug.txt  go.mod  go.sum  main.go
golang/slack/: client.go
golang/utils/: utils.go
internal/app/: app.go
internal/auth/: credentials.go
internal/banner/: banner.go
internal/models/: channel.go
internal/scanner/: scanner.go
internal/slack/: additional_operations.go  client.go  operations.go
localtesting/: Dockerfile  steps.md
pkg/slackattack/: slackattack.go
slack/: client.go
slackattack/: _version.py  slackattack.py
utils/: utils.go
