[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slackattack"
version = "1.1.1"
description = "Slack post-exploitation script for leaked bot tokens and xoxd cookies"
authors = [
  { name = "Jonathan Stines", email = "jonathan.stines@gmail.com" }
]
readme = "README.md"
license = { text = "UNKNOWN" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "argparse",
  "requests",
  "datetime",
  "termcolor"
]

[project.scripts]
slackattack = "slackattack:main"

[dynamic]
requires-python = ">=3.6"
